# web-scrapping-meteo

./: .gitignore  Pipfile  README.md  docker-compose.yml  env  hello.py  main.py  makefile  meteo  meteo.db  meteo.ipynb  meteo.parquet  meteo.py  meteo_data_civ.csv  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
containers/loader/: Dockerfile  requirements.txt
metabase-data/metabase.db/: metabase.db.mv.db  metabase.db.trace.db
output/: meteo_data_civ.db
src/: etl.py  main.py  meteo.py
src/extraction/: extract.py
src/loader/: load_data.py
src/transformation/: transform.py
src/web_scrapping_meteo/: __init__.py
test/integration/: test_load_data.py
utils/: db.py  webscrapping.py
