[project]
name = "web-scrapping-meteo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sahi Mohamed Francis Gonsangbeu", email = "mohamedfrancissahi@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "tqdm>=4.66.5",
    "pytest>=8.3.3",
    "sqlalchemy>=2.0.35",
    "ruff>=0.6.6",
    "python-dotenv>=1.0.1",
    "lxml>=5.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/web_scrapping_meteo"]
